assets/css/style.css
/* css reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* utilities */

:root {
    --bg_header:hsl(24.71deg 100% 50%);
    --tx_color: white;
    --discount_color: red;
    --bg_sustainability_color: green;
    --bg_footer:hsl(0deg 0% 10.2%);
}

header {
    position: sticky;
    z-index: 10000;
    top: 0;
    left: 0;
}

footer {
    background-color: var(--bg_footer);
    color: var(--tx_color);
    padding: 1rem;
}

body {
    font-family: 'Open Sans', sans-serif;
    min-width: 1500px;
}


.container {
    width: 80%;
    max-width: 1170px;
    margin: auto;
}

.row {
    display: flex;
    justify-content: space-around;
}

.col-2 {
    width: calc(100% / 12 * 2);
}

.col-4 {
    width: calc(100% / 12 * 4);
}

.col-8 {
    width: calc(100% / 12 * 8);
}

.col-10 {
    width: calc(100% / 12 *10);
}

.center {
    text-align: center;
    align-items: center;
}
.no-style {
    list-style-type: none;
}


/* header region */

.nav{
    padding: 1rem;
    background-color: var(--bg_header);
    color: var(--tx_color);
    box-shadow: 0 0 10px black;
}

.left {
    justify-content: start;
}

.right {
    display: flex;
    justify-content: end;
}


header .col-2>a>i {
    color: var(--tx_color);
}

.no-style>li , header .col-2>a>i {
    padding-left: 0.25rem;
    display: inline-block;
}
/* #end header region */

/* main region */

main .row {
    margin-top:3rem;
    margin-bottom: 3rem;

}


main .picture>div>img {
    height: 34rem;
    background-size: contain;

}

main .picture>div {
    position: absolute;
}

.discount, .sustainability {
    bottom: 3rem;
    color: var(--tx_color);
    padding: 0.25rem 0.5rem;
    z-index: 2;
}

.picture, .info_card {
    position: relative;
}

.discount {
    background-color: var(--discount_color);
}

.sustainability {
    background-color: var(--bg_sustainability_color);
    left: 3.5rem;
}

.heart {
    background-color: var(--tx_color);
    padding: 0.5rem 1rem;
    font-size: 1.75rem;
    right: 0;
    top: 1rem;
    z-index: 4;
}

.info_card>span {
    font-size: small;
}

.price {
    color: var(--discount_color);
}

.old-price {
    text-decoration-line: line-through;
}

.image {
    background-image: url(../img/1.webp);
    z-index: 1;
}

.one {
    background-image: url(../img/2.webp);
}

.two {
    background-image: url(../img/3.webp);
}

.three {
    background-image: url(../img/4.webp);
}

.four {
    background-image: url(../img/5.webp);
}

.five {
    background-image: url(../img/6.webp);
}

.image, .one, .two, .three, .four, .five {
    height: 34.5rem;
    background-repeat: no-repeat;
    background-size: contain;
    position: relative;
}


.heart:hover {
    color:var(--discount_color);
}


.image:hover{
    background-image: url(../img/1b.webp);
}

.one:hover {
    background-image: url(../img/2b.webp);
}

.two:hover {
    background-image: url(../img/3b.webp);
}

.three:hover {
    background-image: url(../img/4b.webp);
}

.four:hover {
    background-image: url(../img/5b.webp);
}

.five:hover {
    background-image: url(../img/6b.webp);
}




/* end main region */

/* footer section */
footer h4{
    font-size: 1.25rem;
    margin-bottom: 0.75rem;
}

.social>a>i {
    color: var(--tx_color);
}


/* end footer section */

